feat - added likes functionality for books
